--- a/main.css
+++ b/main.css
@@ -1,7 +1,14 @@
+head {
+  font-family: 'Trebuchet MS', Helvetica, sans-serif;
+  font-size: 1rem;
+  font-color: blue;
+  back-ground color: white;
+}
+
 body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
   font-color: blue;
-  back-ground color: white:
+  back-ground color: white;
 }
 
