--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
 head {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
-  font-color: blue;
-  back-ground color: white;
+  color: blue;
+  back-ground color: #ffffff;
 }
 
 body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
-  font-color: blue;
+  color: blue;
   back-ground color: white;
 }
 
