--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ head {
 body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
-  color: blue;
+  color: #00539F;
   back-ground color: white;
 }
 
