--- a/main.css
+++ b/main.css
@@ -9,6 +9,6 @@ body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
   color: #0095DD;
-  back-ground color: white;
+  back-ground color: #D4DDE4;
 }
 
