--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
 head {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
-  color: blue;
+  color: black;
   back-ground color: #ffffff;
 }
 
 body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 1rem;
-  color: #0095DD;
+  color: black;
   back-ground color: #D4DDE4;
 }
 
