--- a/main.css
+++ b/main.css
@@ -1,13 +1,13 @@
 head {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
-  font-size: 1rem;
+  font-size: 20px;
   color: black;
   back-ground color: #ffffff;
 }
 
 body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
-  font-size: 1rem;
+  font-size: 12px;
   color: black;
   back-ground color: #D4DDE4;
 }
