--- a/main.css
+++ b/main.css
@@ -1,14 +1,14 @@
 head {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 20px;
-  color: black;
+  color: #6A7B86;
   back-ground color: #ffffff;
 }
 
 body {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
-  font-size: 12px;
-  color: black;
+  font-size: 10px;
+  color: #6A7B86;
   back-ground color: #D4DDE4;
 }
 
