--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 head {
-  font-family: 'Trebuchet MS', Helvetica, sans-serif;
+  font-family: 'Open Sans', sans;
   font-size: 20px;
   color: #6A7B86;
   back-ground color: #ffffff;
 }
 
 body {
-  font-family: 'Trebuchet MS', Helvetica, sans-serif;
+  font-family: 'Open Sans', sans;
   font-size: 10px;
   color: #6A7B86;
   back-ground color: #D4DDE4;
